spade-tests/src/snapshots/spade_tests__typeinference__type_error_when_overflow_is_possible.snap
---
source: spade-tests/src/typeinference.rs
---
entity main(a: int<16>, b: int<16>) -> int<16> {
    a + b
}


error: Expected type int<16>, got int<17>
  ┌─ testinput:2:5
  │
2 │     a + b
  │     ^^^^^ Expected int<16>
  │
  = note: Expected: 16
                in: int<16>
               Got: 17
                in: int<17>


